--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -789,7 +789,7 @@
                         + '<p> Upload a saved json file onto the site for ease of access in terms of viewing and editing in the tab ‘Saved Item Sets Manager’</p>'
                         + '<p> Accepted json files are usually in the form of:</p>'
                         + '<div class="tutorial-img"><img src = "https://i.gyazo.com/0c332b0c1d04e3e2d4cadcdc94d3d8e7.png"></div>'
-                        + '<p> You can make item sets on the League by [//askJosephlater](picture??)</p>'
+                        + '<br> <p> Don\'t know exactly how to get the item set or where you can get it from League? We got you covered. Check out the FAQ for more info!</p>'
                         + '<br> <p> Click ‘Advanced Options’ to set further details about your item set.</p>'
                         + '<p style="font-size:10px"> Note: You do not need to fill in any of the options at all! If you do decide to, you don’t have to fill in every option!</p>'
                         + '<div class="tutorial-img"><img style="margin:0px auto;display:block" src = "https://i.gyazo.com/00e93232e57aeeb6de10bb716fa34dc7.png"></div>'
@@ -811,9 +811,12 @@
                           + '<div class="col-xs-12">'
                           + '<div class="tutorial-container">'
                           + '<h3> Matchup Generator Tutorial </h3>'
-                          + '<p> Type in the champion that you are playing or want to play to get an item set used by the majority of players.</p>'
-                          + '<p> Furthermore, type in the name of your opponent or potential opponent to narrow down the options of what could possibly help you win lane.</p>'
-                          + '<p> Going Swain against a Yasuo top instead of mid? Go ahead and fill in the third option to see if the build changes at all. Maybe the lane change means an extra item you should get!</p>'
+                          + '<p> You must fill in the first option to get the ball rolling! Type in the champion that you are playing or want to play to get a viable item set that can generally be played against any opponent.</p>'
+                          + '<p> Furthermore, type in the name of your opponent or potential opponent to narrow down the options of what could possibly help you win lane. Unfortunately we have a limiter on database size so we might not necessarily be able to get a Poppy v Urgot build for you, but a Poppy build will appear for you at the very least.</p>'
+                          + '<p> Going Swain against a Yasuo top instead of mid? Go ahead and fill in the third option to see if the build changes at all. Maybe the lane change means an extra item you should get!<br></p>'
+                          + '<p> Here\'s an example of what you might get:</p>'
+                          + '<div class="tutorial-img"><img src="https://i.gyazo.com/ca07f2b7ac0aa524e5975be8ed2fe74c.png" style="width:100%;height90%"></div>'
+                          + '<br><p> From here, you can either save the item set into your saved item sets so that you can adjust it or immediately download it and use it in game. Don\'t know how to put it into your game? Check out the FAQ for help on this!</p>'
                           + '</div>'
                           + '</div>'
                           + '</div>',
@@ -836,7 +839,7 @@
                            + '<div class="tutorial-img"><img src="https://i.gyazo.com/de2e6cb56364952f614a4383d9e021ef.png" style="width:100%; height:90%"></div>'
                            + '<p> Done with the greatest Tahm Kench build ever? Click the save button at the upper right corner and you’re good to go! </p>'
                            + '<p> By the way, clicking the button at the top allows you to change the name of the item set you are building.</p>'
-                           + '<p> You can also immediately download the item set to use in game. Good luck on the Fields of Justice! </p>'
+                           + '<p> You can also immediately download the item set to use in game. If you need help on how to use this, check out the FAQ. Good luck on the Fields of Justice! </p>'
                            + '<div class="tutorial-img"><img src="https://i.gyazo.com/738a68287c3896037ba06d10ad37ebdd.png"></div>'
                            + '<p> Click \‘Advanced Options\’ to set further details about your item set.</p><p style="font-size:10px">Note: You do not need to fill in any of the options at all! If you do decide to, you don’t have to fill in every option!</p>'
                            + '<p>\'Champion For\' indicates which champion you are making this item set for.<br>‘Champion Against’ indicates which champion this build can be potentially be used against.<br>The third option simply lets you choose which lane this item set is usually used in. Feel free to leave the option as ‘any lane’ if you honestly think it’d be good for any lane!</p>'
@@ -858,8 +861,8 @@
                             + '<p> Have time to look through item sets for the best build ever? This is the right place for you! If you need something for a quick game, it is highly recommended to just go to the ‘Matchup Generator’ tab!</p>'
                             + '<p> First of all, please note that all the options displayed are in fact... completely optional. You don\'t have to fill in any of them!<br>Fill in \‘Champion For\’ to get the item set of a champ you want to play.<br>\‘Champion Against\’ indicates which champion this build can be potentially be used against.<br>The third option simply lets you choose which lane this item set is usually used in. Feel free to leave the option as ‘any lane’ if you honestly think it’d be good for any lane!</p>'
                             + '<p> After you click the search button, you’ll get the top twenty builds for whatever you searched for!</p>'
-                            + '<div class="tutorial-img"><img src="https://i.gyazo.com/07a8774e89c9c5b35ebd3af1b85ab975.png" style="width:100%; height:90%"></div>'
-                            + '<p> From here on, there are many things you can do:<br><strong>1. Preview!</strong> Check out what\'s in these builds first of all.<br><strong>2. Download!</strong> So you see a build you like.. get the json file so you can go use it in-game immediately<br><strong>3. Save!</strong> See a really cool build but think that some changes should be added? Save it to your own item sets for editing purposes or so that you simply don\'t have to search for it again!<br><strong>4. Upvote builds!</strong> Like what you see? Give it a star so other people can also enjoy this marvelous creation. </p>'
+                            + '<div class="tutorial-img"><img src="https://i.gyazo.com/c7e6a15914c8379592ec45c7b0975102.png" style="width:100%; height:90%"></div>'
+                            + '<p> From here on, there are many things you can do:<br><strong>1. Preview!</strong> Check out what\'s in these builds first of all.<br><strong>2. Download!</strong> So you see a build you like.. get the json file so you can go use it in-game immediately. Don\'t know how to use it? Check out the FAQ for more details!<br><strong>3. Save!</strong> See a really cool build but think that some changes should be added? Save it to your own item sets for editing purposes or so that you simply don\'t have to search for it again!<br><strong>4. Upvote builds!</strong> Like what you see? Give it a star so other people can also enjoy this marvelous creation. </p>'
                             + '</div>'
                             + '</div>'
                             + '</div>',
@@ -877,10 +880,9 @@
                              + '<h3>Saved Item Sets Manager Tutorial</h3>'
                              + '<p> To start off, click the blue button in the middle of the screen. :]</p>'
                              + '<p> In here, you can view and manage your item sets!</p>'
-                             + '<div class="tutorial-img"><img src="https://i.gyazo.com/05616cc34cf3fe6153c3f3f8c2db5637.png" style="width:90%; height:90%"></div>'
+                             + '<div class="tutorial-img"><img src="https://i.gyazo.com/68afc62225d01c810a8ee65d75b32fb4.png" style="width:100%; height:90%"></div>'
                              + '<p>Alright, here’s what you can do with all the colorful buttons:</p>'
-                             + '<p><strong>1. Preview:</strong> Hopefully, you gave your item sets names so you can easily distinguish which is which. If not, it’s still somewhat okay! You can click the preview button to see your item set<br><strong>2. Download:</strong> Use your item set in game! Clicking this button will open the json file of the item set in a new tab. Don’t know how to actually get this into your game? There’s more info of how below.<br><strong>3. Edit:</strong> Change something in your item set whether it be the name, an item, a new block or anything else you see fit!<br><strong>4. Delete:</strong> Want to make room for an even better item set? If you click this button, you’ll get rid of an already saved item set, but be careful because this action cannot be undone. (Of course you can always make it again in the \‘Item Set Builder\’ tab!</p>'
-                             + '<p> So how exactly DO you use the downloaded json file? Well...</p>'
+                             + '<p><strong>1. Preview:</strong> Hopefully, you gave your item sets names so you can easily distinguish which is which. If not, it\’s still somewhat okay! You can click the preview button to see your item set<br><strong>2. Download:</strong> Use your item set in game! This button will open the json file of the item set in a new tab. If you don\’t know how to actually get this into your game, there\’s more info of how in the <strong>FAQ</strong>.<br><strong>3. Edit:</strong> Change something in your item set whether it be the name, an item, a new block or anything else you see fit!<br><strong>4. Delete:</strong> Want to make room for an even better item set? If you click this button, you’ll get rid of an already saved item set, but be careful because this action cannot be undone. (Of course you can always make it again in the \‘Item Set Builder\’ tab!</p>'
                              + '</div>'
                              + '</div>',
                      onEscape: function() {},
