about updated with 'how to download'

--- a/templates/italiansushi/about.html
+++ b/templates/italiansushi/about.html
@@ -148,6 +148,31 @@
                             Check here for more info: <a href="https://developer.riotgames.com/docs/item-sets">
                             https://developer.riotgames.com/docs/item-sets</a>
                         </p>
+                    <h4 style="margin-bottom:5px;">How to Download:</h4>
+                        <p>Use your item set in game! Clicking the download button will open the json file of the item set in a new tab. <br>
+                            <br>
+                            It should look something like this:
+                            <br>
+                            <ul style="list-style-type:none"><li><img class="tutorial-img"src="http://i.imgur.com/TG9EDAn.png" title="source: imgur.com" style="width:60%;height:35%;"/></li></ul>
+                            <br>
+                            <ol type='1'>
+                                <li>Right click anywhere on the page and select 'Save as'</li>
+                                <br>
+                                <li>Navigate to your League of Legends folder, which is where you saved it when you first installed the game.</li>
+                                The default location for Windows users is: C:\Riot Games\League of Legends\<br>
+                                <br>
+                                <li>If you want the item set to be available for all champions, navigate to: </li>
+                                    <ul style="list-style-type:circle"><li>League of Legends > Config > Global > Recommended</li></ul><br>
+                                    (if you can't find the Global folder, create one in the Config folder)<br>
+                                <br>
+                                <li>If you want the item set to be saved for specific champion, navigate to: </li>
+                                    <ul style="list-style-type:circle"><li>League of Legends > Config > Champions > <span style="color:blue">champion name</span> > Recommended</li></ul>
+                                <br>
+                                <img class="tutorial-img" src="http://i.imgur.com/tHphIWR.png" title="source: imgur.com" style="width:75%;height:35%;"/>
+                                <br>
+                                <li>After saving, your item set should be available in game.</li>
+                            </ol>
+                        </p>
                     <h4 style="margin-bottom:5px;">Are you coming out with more features (e.g. item sets for ARAM, dataset updates)?</h4>
                         <p>
                         After the Riot API Challenge 2.0 is over and judged, we will add new features. 
