--- a/templates/italiansushi/about.html
+++ b/templates/italiansushi/about.html
@@ -61,6 +61,9 @@
                 <ul class="nav navbar-nav">
                 	<li><a href="">About</a></li>
                 </ul>
+                <ul class="nav navbar-nav">
+                    <li><a href="/faq">FAQ</a></li>
+                </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if logged_in %}
                     <li><a href="../logout/">{{ user.username }} | Logout</a></li> 
@@ -134,7 +137,7 @@
                     <p style="margin-bottom:0px;">     Champion Data -- {{ champ_data_update }}    </p>
                     <p style="margin-bottom:5px;">     Item Data  -- {{ item_data_update }}     </p>
                     <hr style="margin-bottom:10px; margin-top:10px;">
-                    <h3 style="margin-bottom:5px; margin-top:0px;">Frequently Asked Questions</h3>
+                    <!--<h3 style="margin-bottom:5px; margin-top:0px;">Frequently Asked Questions</h3>
                     <p> Your question still not answered? 
                         Shoot us an email at <a href="mailto:italiansushichef@gmail.com?Subject=Question">italiansushichef@gmail.com</a>
                     </p>
@@ -176,7 +179,7 @@
                     <h4 style="margin-bottom:5px;">Are you coming out with more features (e.g. item sets for ARAM, dataset updates)?</h4>
                         <p>
                         After the Riot API Challenge 2.0 is over and judged, we will add new features. 
-                        </p>
+                        </p>-->
                 </div>
             </div>
       </div>
