--- a/templates/italiansushi/about.html
+++ b/templates/italiansushi/about.html
@@ -151,7 +151,7 @@
                             Check here for more info: <a href="https://developer.riotgames.com/docs/item-sets">
                             https://developer.riotgames.com/docs/item-sets</a>
                         </p>
-                    <h4 style="margin-bottom:5px;">How to Download:</h4>
+                    <h4 style="margin-bottom:5px;">How do I download an item set?:</h4>
                         <p>Use your item set in game! Clicking the download button will open the json file of the item set in a new tab. <br>
                             <br>
                             It should look something like this:
