--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -62,6 +62,9 @@
                 <ul class="nav navbar-nav">
                     <li><a href="about">About</a></li>
                 </ul>
+                <ul class="nav navbar-nav">
+                    <li><a href="/faq">FAQ</a></li>
+                </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if logged_in %}
                     <li><a href="../logout/">{{ user.username }} | Logout</a></li> 
