--- a/static/css/index.css
+++ b/static/css/index.css
@@ -23,7 +23,7 @@
 }
 
 .about-container {
-  background-image: url(http://i.imgur.com/iUEnIob.jpg);
+  background-image: url(http://i.imgur.com/joJbX6n.jpg);
   max-width:100%; 
   max-height:100%; 
   background-size:100% 100%;
@@ -38,7 +38,7 @@
 }
 
 .faq-container {
-  background-image: url(http://i.imgur.com/0IYtdou.jpg);
+  background-image: url(http://i.imgur.com/oyCuFhJ.jpg);
   max-width:100%;
   max-height:100%;
   background-size:100% 100%;
