--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -60,10 +60,10 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="about">About</a></li>
+                    <li><a href="/about/">About</a></li>
                 </ul>
                 <ul class="nav navbar-nav">
-                    <li><a href="/faq">FAQ</a></li>
+                    <li><a href="/faq/">FAQ</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if logged_in %}
