--- a/templates/italiansushi/about.html
+++ b/templates/italiansushi/about.html
@@ -59,10 +59,10 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                	<li><a href="">About</a></li>
+                    <li><a href="/about/">About</a></li>
                 </ul>
                 <ul class="nav navbar-nav">
-                    <li><a href="/faq">FAQ</a></li>
+                    <li><a href="/faq/">FAQ</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if logged_in %}
